--- a/scss/4-layout/_hero.scss
+++ b/scss/4-layout/_hero.scss
@@ -19,7 +19,6 @@ html {
   height: 95vh;
   width: 100%;
   object-fit: contain;
-  background-color: #4a4a4a;
   grid-template-columns: 1fr;
 
 }
