--- a/scss/4-layout/_navigation.scss
+++ b/scss/4-layout/_navigation.scss
@@ -84,7 +84,7 @@ body{
      position: absolute;
      top: 0;
      right: 0;
-     background-color: rgba(0, 0, 0, 0.7);
+
      height: 70px;
      width: 70px;
    }
@@ -120,7 +120,7 @@ body{
      padding: 0 20px;
      line-height: 70px;
      background-color: rgba(0, 0, 0, 0.7);
-     color: #ffffff;
+     color: #00cccc;
      text-decoration: none;
    }
      nav ul li a {
@@ -154,7 +154,7 @@ body{
      border-radius: 1px;
      height: 5px;
      width: 35px;
-     background: #ffffff;
+     background: #00cccc;
      position: absolute;
      display: block;
      content: "";
