--- a/scss/5-components/_caseGsub.scss
+++ b/scss/5-components/_caseGsub.scss
@@ -294,7 +294,7 @@
     color: white;
     grid-area: ed;
     justify-self: center;
-    text-align: center;
+    text-align: left;
     margin: 16px;
   
    }
